--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,9 @@
 spring:
   application:
     name: sbb
+  thymeleaf:
+    cache: false
+    prefix: file:src/main/resources/templates/
   output:
     ansi:
       enabled: always
